--- a/README
+++ b/README
@@ -2,8 +2,6 @@ PyChee is a lightweight Apache/Python framework that was written over the course
 
 Prerequisites:
   + Apache 2
-  + mod_python
-  + mod_rewrite
-  + mod_headers
+  + mod_WSGI (aptitude: libapache2-mod-wsgi)
   + Python 2.6+
   + Cheetah
