--- a/README
+++ b/README
@@ -2,6 +2,6 @@ PyChee is a lightweight Apache/Python framework that was written over the course
 
 Prerequisites:
   + Apache 2
-  + mod_WSGI (aptitude: libapache2-mod-wsgi)
+  + mod_python
   + Python 2.6+
   + Cheetah
